[tool.poetry]
name = "maria-foo"
version = "0.1.0"
description = ""
authors = ["surdouski <michael.surdouski@gmail.com>"]
readme = "README.md"
packages = [{include = "maria_foo"}]

[tool.poetry.dependencies]
python = "^3.10"
mariadb = "^1.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
